=== HEAD

* Raise a Sequel::Error if Sequel.connect is called with something other than a Hash or String (jeremyevans) (#272)

* Add -N option to bin/sequel to not test the database connection (jeremyevans)

* Make Model.grep call Dataset#grep instead of Enumerable#grep (jeremyevans)

* Support the use of Regexp as first argument to StringExpression.like (jeremyevans)

* Fix Database#indexes on PostgreSQL when the schema used is a symbol (jeremyevans)

=== 3.1.0 (2009-06-04)

* Require the classes match to consider an association a reciprocal (jeremyevans) (#270)

* Make Migrator work correctly with file names like 001_873465873465873465_some_name.rb (jeremyevans) (#267)

* Add Dataset#qualify_to and #qualify_to_first_source, for qualifying unqualified identifiers in the dataset (jeremyevans)

* All the use of #sql_subscript on most SQL::* objects, and support non-integer subscript values (jeremyevans)

* Add reflection.rdoc file which explains and gives examples of many of Sequel's reflection methods (jeremyevans)

* Add many_through_many plugin, allowing you to construct an association to multiple objects through multiple join tables (jeremyevans)

* Add the :cartesian_product_number option to associations, for specifying if they can cause a cartesian product (jeremyevans)

* Make :eager_graph association option work correctly when lazily loading many_to_many associations (jeremyevans)

* Make eager_unique_table_alias consider joined tables as well as tables in the FROM clause (jeremyevans)

* Make add_graph_aliases work correctly even if set_graph_aliases hasn't been used (jeremyevans)

* Fix using :conditions that are a placeholder string in an association (e.g. :conditions=>['a = ?', 42]) (jeremyevans)

* On MySQL, make Dataset#insert_ignore affect #insert as well as #multi_insert and #import (jeremyevans, tmm1)

* Add -t option to bin/sequel to output the full backtrace if an exception is raised (jeremyevans)
