@@ -1,5 +1,9 @@
 === HEAD
 
+* Remove Dataset#table_exists?, use Database#table_exists? instead (jeremyevans)
+
+* Fix graphing of datasets with dataset sources (jeremyevans) (#271)
+
 * Raise a Sequel::Error if Sequel.connect is called with something other than a Hash or String (jeremyevans) (#272)
 
 * Add -N option to bin/sequel to not test the database connection (jeremyevans)
